[package]
name = "uqff_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", version = "0.3.2" }
tokio = "1.40.0"

[features]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]