[package]
name = "uqff_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = "4.5.21"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
tokio = "1.44.0"

[features]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
lto = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 3
